--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -60,6 +60,7 @@ INSTALLED_APPS = [
     'django.contrib.messages',
     'django.contrib.staticfiles',
     'django.contrib.humanize',
+    'django.contrib.postgres',
     'os2datascanner.projects.report.reportapp.apps.ReportappConfig',
     'mozilla_django_oidc',
     'django_extensions',
